--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <title>CSE 341 API - John</title>
+    
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <script src="./script.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
         <div class="content">
             <div class="about">
                 <h1>
-                    <div class="proName" id="professionalName"></div>
+                    <div class="proName" id="professionalName">John's CSE 341 Project</div>
                     <div class="stage">
                         <div class="pyramid3d">
                             <div class="triangle side1"></div>
@@ -26,29 +28,63 @@
                         </div>
                     </div>
                 </h1>
+                
                 <div class="flex-container">
                     <div class="flex-child">
-                        <img src="" alt="" id="professionalImage">
+                        <img src="./images/profilePic copy.jpg" 
+                             alt="John's Avatar" id="professionalImage">
                     </div>
                     <div class="flex-child">
                         <h3>
-                            <a href="" target="_blank" id="nameLink"></a><span id="primaryDescription"></span>
+                            <a href="https://github.com/Jonathant4242/CSE_341_JT" target="_blank" id="nameLink">
+                                GitHub Repository
+                            </a>
                         </h3>
-
                     </div>
                 </div>
-                <p class='pleft' id="workDescription1"></p>
-                <p class='pright' id="workDescription2"></p>
-                <h3 id="linkTitleText"></h3>
+
+                <p class='pleft' id="workDescription1">
+                    Welcome to my CSE 341 API project! This backend serves a **RESTful API** for managing contacts, built with **Node.js, Express, MongoDB, and Swagger**.
+                </p>
+                <p class='pright' id="workDescription2">
+                    You can explore the API documentation, test endpoints, and integrate the backend with the provided frontend interface.
+                </p>
+
+                <h3 id="linkTitleText">Project Links</h3>
                 <ul>
-                    <li><a href="" target="_blank" id="linkedInLink"></a></li>
-                    <li><a href="" target="_blank" id="githubLink"></a></li>
+                    <li>
+                        <a href="https://cse-341-jt.onrender.com" target="_blank" id="renderLink">
+                            🌍 Live API on Render
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://cse-341-jt.onrender.com/api-docs" target="_blank" id="swaggerLink">
+                            📄 Swagger Documentation
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://cse341-contacts-frontend.netlify.app/" target="_blank" id="frontendLink">
+                            🎨 Deployed Frontend
+                        </a>
+                    </li>
                 </ul>
-                <p id="contactText"></p>
+
+                <h3>🛠️ API Endpoints</h3>
+                <ul>
+                    <li><code>GET /contacts</code> - Fetch all contacts</li>
+                    <li><code>POST /contacts</code> - Create a new contact</li>
+                    <li><code>GET /contacts/:id</code> - Get a single contact</li>
+                    <li><code>PUT /contacts/:id</code> - Update a contact</li>
+                    <li><code>DELETE /contacts/:id</code> - Remove a contact</li>
+                </ul>
+
+                <h3>📬 Contact</h3>
+                <p id="contactText">
+                    If you have any questions, feel free to reach out via GitHub.
+                </p>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
